logs/rtt.20260330-083612.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent4)
warning: unexpected `cfg` condition value: `all_chapters`
 --> tests/Chap65/TestUnionFindStEph.rs:1:8
  |
1 | #![cfg(feature = "all_chapters")]
  |        ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: expected values for `feature` are: `Chap02`, `Chap03`, `Chap05`, `Chap06`, `Chap11`, `Chap12`, `Chap17`, `Chap18`, `Chap19`, `Chap21`, `Chap23`, `Chap26`, `Chap27`, `Chap28`, `Chap30`, `Chap35`, `Chap36`, `Chap37`, `Chap38`, `Chap39`, `Chap40`, `Chap41`, `Chap42`, `Chap43`, `Chap44`, `Chap45`, `Chap47`, `Chap49`, `Chap50`, `Chap51`, `Chap52`, `Chap53`, `Chap54`, `Chap55`, and `Chap56` and 12 more
  = help: consider adding `all_chapters` as a feature in `Cargo.toml`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: requested on the command line with `-W unexpected-cfgs`

warning: `apas-verus` (test "TestUnionFindStEph") generated 1 warning
error[E0433]: failed to resolve: use of undeclared type `ArraySeqStPerS`
   --> tests/Chap21/TestChap21.rs:374:13
    |
374 |     let a = ArraySeqStPerS::from_vec(vec![42usize]);
    |             ^^^^^^^^^^^^^^ use of undeclared type `ArraySeqStPerS`
    |
help: consider importing one of these structs
    |
  4 + use apas_verus::Chap18::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerS;
    |
  4 + use apas_verus::Chap19::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerS;
    |

error[E0433]: failed to resolve: use of undeclared type `ArraySeqStPerS`
   --> tests/Chap21/TestChap21.rs:391:13
    |
391 |     let a = ArraySeqStPerS::from_vec(vec![1usize]);
    |             ^^^^^^^^^^^^^^ use of undeclared type `ArraySeqStPerS`
    |
help: consider importing one of these structs
    |
  4 + use apas_verus::Chap18::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerS;
    |
  4 + use apas_verus::Chap19::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerS;
    |

error[E0433]: failed to resolve: use of undeclared type `ArraySeqStPerS`
   --> tests/Chap21/TestChap21.rs:392:13
    |
392 |     let b = ArraySeqStPerS::from_vec(vec![2usize]);
    |             ^^^^^^^^^^^^^^ use of undeclared type `ArraySeqStPerS`
    |
help: consider importing one of these structs
    |
  4 + use apas_verus::Chap18::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerS;
    |
  4 + use apas_verus::Chap19::ArraySeqStPer::ArraySeqStPer::ArraySeqStPerS;
    |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `apas-verus` (test "TestChap21") due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 1s
